# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://hatch.pypa.io/latest/config/metadata/
[tool.hatch.version]
source = "vcs"

# read more about configuring hatch at:
# https://hatch.pypa.io/latest/config/build/
[tool.hatch.build.targets.wheel]
packages = ["src/mock_pixi_tasks"]


# Project metadata (see https://peps.python.org/pep-0621)
[project]
name = "mock_pixi_tasks"
dynamic = ["version"]
description = "Mock package for pixi task collection"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Name Surname", email = "name.surname@example.org" }]

# Required Python version and dependencies
requires-python = ">=3.11, <3.12"
dependencies = ["fractal-task-tools == 0.0.12", "pydantic"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
mock_pixi_tasks = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
